[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "hora"
version = "0.1.0"
description = "BrightSign autorun generator for synced video playback"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Index Team" }]
dependencies = []

[project.scripts]
hora = "hora.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hora"]
